# primaryINS

./: CMakeLists.txt  README.md  cmake.sh
apps/: CMakeLists.txt
apps/Mechanization/: CMakeLists.txt  mechanization.cpp
apps/calibration/: CMakeLists.txt  calibration.cpp
apps/initialization/: CMakeLists.txt  initialization.cpp
lib/files/: IMUReader.cpp  IMUReader.hpp
tests/: calibration_test.sh
tests/data/: testData.txt  六位置法标定-2021.docx  静态粗对准-2021.doc
